--- a/friends-app/src/App.css
+++ b/friends-app/src/App.css
@@ -31,12 +31,17 @@
 }
 
 .friends-container {
-  margin: 200px auto 0 auto;
+  margin: 0 auto;
   width: 75%;
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   grid-gap: 30px;
   justify-content: center;
+}
+
+.wrapper h1,
+.wrapper h2 {
+  text-align: center;
 }
 
 .friend {
