--- a/friends-app/src/App.css
+++ b/friends-app/src/App.css
@@ -3,7 +3,7 @@
   padding: 25px 0;
   border-radius: 5px;
   text-align: center;
-  width: 50%;
+  width: 30%;
   margin: 10% auto;
   display: grid;
   grid-template-rows: repeat(1fr, 3);
@@ -48,4 +48,25 @@
   padding: 5%;
   font-size: 16px;
   border: 3px solid black;
+}
+
+.friend-form {
+  width: 40%;
+  margin: 2% auto;
+  display: grid;
+  grid-template-rows: repeat(1fr, 3);
+  justify-items: center;
+  border: 3px solid black;
+  border-radius: 5px;
+  padding-bottom: 1%;
+}
+
+.friend-form input {
+  margin: 2% 0;
+  padding: 5px;
+}
+
+.friend-form button {
+  margin-top: 1%;
+  width: 30%;
 }
